# routes/swagger.js
@@ -1,8 +1,7 @@
-const router = require("express").Router();
-const swaggerUi = require("swagger-ui-express");
-const swaggerDocument = require("../swagger.json");
-
-router.use("/api-docs", swaggerUi.serve);
-router.get("/api-docs", swaggerUi.setup(swaggerDocument));
+const router = require('express').Router();
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require('../swagger.json');
+router.use('/api-docs', swaggerUi.serve);
+router.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
 module.exports = router;
